resources/tests/parser/good/const_def.gshl
const a = 2
const b = 2;
const c = "qwe"
const y = "somthin" + "asd"