resources/tests/parser/bad/const_def.gshl
const;
const a;
const b "qwe"
const c =